--- a/studentbio.html
+++ b/studentbio.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
+    <link rel="stylesheet" href="studentbio_styles.css">
     <title>Student Bio</title>
 </head>
+
 <body>
-    <h1>Student Bio</h1>
-    <h2>Jonathon Engelien</h2>
-    <img src="StudentBio_Image.jpg" alt="Picture of Jonathon">
+    <header>
+        <h1>Student Bio</h1>
+    </header>
+    <div class="lowerSection">
+        <h2>Jonathon Engelien</h2>
 
-    <br><br><br><br>
+        <section class="section1">
+            <img src="StudentBio_Image.jpg" alt="Picture of Jonathon">
+        </section>
 
-    <p1>Jonathon Engelien is a connected experience designer from Wisconsin who currently resides in St. Paul, Minnesota.  He graduated with a BFA in Fine Art and Graphic Design from Bethel University.  He is currently enrolled at the University of Minnesota for his Full Stack Developer certification.  Jonathon is deeply passionate about merging human design and experiences between the digital and physical world.  He is currently available for freelance projects.
-    </p1>
-    <br><br><br><br>
-    <h2>Contact Info</h2>
-    <ul>
-            <li>
-                <bold>Email:</bold> <a href="mailto:jonathonengelien@gmail.com">
-            </li>
-            <li>
-                <bold>Github:</bold> <a href="https://github.com/jonathonengelien/">https://github.com/jonathonengelien/</a>
-            </li>
-            <li>
-                <bold>Portfolio:</bold> <a href="http://www.jonathonengelien.com/">http://www.jonathonengelien.com/</a>
-            </li>
-          </ul>
+        <section>
+            <p1>
+                Jonathon Engelien is a connected experience designer from Wisconsin who currently resides in St. Paul, Minnesota.He graduated with a BFA in Fine Art and Graphic Design from Bethel University. He is currently enrolled at the University of Minnesota for his Full Stack Developer certification. Jonathon is deeply passionate about merging human design and experiences between the digital and physical world. He is currently available for freelance projects.
+            </p1>
+        </section>
+
+        <section class="section3">
+            <h2>Contact Info</h2>
+            <ul>
+                <li>
+                    <bold>Email:</bold>
+                    <a href="mailto:jonathonengelien@gmail.com">jonathonengelien@gmail.com</a>
+                </li>
+                <li>
+                    <bold>Github:</bold>
+                    <a href="https://github.com/jonathonengelien/">https://github.com/jonathonengelien/</a>
+                </li>
+                <li>
+                    <bold>Portfolio:</bold>
+                    <a href="http://www.jonathonengelien.com/">http://www.jonathonengelien.com/</a>
+                </li>
+            </ul>
+        </section>
+    </div>
 </body>
+
 </html>
